RockWeb/Styles/_rock-core.less
/*
  Rock's Core CSS
  1. Imports - Used to import the various core less files
  2. HTML Overrides - Style overrides for basic HTML tags
  3. Utility Classes - Classes that we use often to keep from writing from repeating ourselves
  4. Bootstrap Overrides - When Bootstrap gets it wrong, we make it right
  5. ASP.Net Overrides - Yep they get it wrong too sometimes
*/

:root {
  --focus-state-border: 1px solid @input-border-focus;
  --focus-state-border-color: @input-border-focus;
  --focus-state-shadow: @input-focus-box-shadow;
  --input-bg-disabled: @input-bg-disabled;
  --input-border: @input-border;
  --input-border-radius: @input-border-radius;
  --input-height-base: @input-height-base;
  --input-padding: @padding-base-vertical @padding-base-horizontal;
  --input-placeholder: @input-color-placeholder;
}

// 1. Imports
//--------------------------------
@import "_rock-mixins.less";
@import "./FontAwesome/mixins.less";
@import "./FontAwesome/variables.less";
@import "./FontAwesome/_rock-upgrade-map-variables.less";
@import "./FontAwesome/_rock-fa-mixins.less";
@import "./JCrop/jcrop.less";
@import "./chosen/bootstrap-chosen-variables.less";
@import "./chosen/bootstrap-chosen.less";

.fa-font-face( @fa-theme-weight-name, @fa-edition );
// Single quotes are required for LESS compilation in Rock
.fa-font-face( 'brands' );

// import as less files so they are concatenated properly
@import (less) "./summernote/summernote.css";

@import "_page-admin.less";
@import "_modal.less";
@import "_forms.less";
@import "_dashboard.less";
@import "_grid.less";

@import "_blocks-cms.less";
@import "_blocks-connections.less";
@import "_blocks-security.less";
@import "_blocks-reporting.less";
@import "_blocks-core.less";
@import "_blocks-groups.less";
@import "_blocks-finance.less";
@import "_blocks-crm.less";
@import "_blocks-communication.less";
@import "_blocks-checkinadmin.less";
@import "_blocks-workflow.less";
@import "_blocks-prayer.less";
@import "_blocks-events.less";
@import "_components.less";

@import "_page-specific.less";

@import "_scroll.less";
@import "_helpers.less";

@import "_devices.less";

@import "./Bootstrap/mixins.less";


// 2. HTML Overrides
//--------------------------------

iframe {
  border: 0 solid @input-border;
}

// 3. Utility Classes
//--------------------------------

.form-row {
  .make-row(10px);
  .clearfix();
  & > .col,
  & > [class*="col-"] {
    padding-right: 5px;
    padding-left: 5px;
  }

  .form-control-group & {
    margin-right: 0;
    margin-left: 0;
  }
}

.tip {
  padding: 0 6px 2px;
  font-size: 11px;
  color: #fff;
  background-color: #71a5bf;
  border-radius: 4px;

  &.tip-liquid,
  &.tip-lava {
    &::after {
      content: "{{ Lava }}";
    }
  }

  &.tip-html {
    &::after {
      content: "< HTML />";
    }
  }
}

.navigation-tip {
  padding: 2px 4px;
  // used to show the user directions to a page (e.g. 'Administration > General Settings')
  font-family: @font-family-monospace;
  font-size: 90%;
  color: @state-info-text;
  white-space: nowrap;
  background-color: @state-info-bg;
  border-radius: @border-radius-base;
}

.alert-warning .navigation-tip {
  color: @state-warning-bg;
  background-color: lighten(@state-warning-text, 10%);
}

// context help
a.help {
  margin-left: 6px;
  color: @help-color;
  outline: 0;
}

a.warning {
  margin-left: 6px;
  color: @brand-warning;
  outline: 0;
}

.help-message {
  font-weight: 400;
}

.photo {
  img {
    width: 100%;
  }

  > a.fluidbox-opened:hover + a {
    display: none;
  }
}

.well {
  & > h1,
  & > h2,
  & > h3,
  & > h4 {
    margin-top: 0;
  }
}


// 4. Bootstrap Overrides
//--------------------------------

.dropdown-menu {
  .box-shadow(@shadow-overlay);
  max-height: 85vh;
  overflow-y: auto;

  // Added to Support Right Aligned Dropdowns
  .dropdown-right & {
    right: 0;
    left: auto;
  }

  .dropdown-item-danger {
    color: @brand-danger;
    &:hover {
      color: #fff;
      background-color: @brand-danger;
    }
  }

  .dropdown-item.btn-link {
    width: 100%;
    padding: 3px 20px;
    color: @dropdown-link-color;
    text-align: left;

    &:hover,
    &:focus {
      color: @dropdown-link-hover-color;
      text-decoration: none;
      background-color: @dropdown-link-hover-bg;
    }
  }
}

// make icons inside of a button fixed with
.btn i.fa {
  width: 1.25em;
  text-align: center;
}

.btn i.btn-icon {
  position: relative;
  top: -1px;
  width: 1em;
  height: 1em;
  margin-left: .5em;
  vertical-align: middle;
}

// add new alert style
.alert-default {
  .alert-variant(@alert-default-bg; @alert-default-border; @alert-default-text);
}

.alert-validation {
  .alert-variant(@alert-validation-bg; @alert-validation-border; @alert-validation-heading);
  font-weight: 700;

  ul,
  span {
    font-weight: 400;
    color: #484848;
  }

  ul {
    padding: 5px 25px 0;
    line-height: 1.5;
  }
}

// grid controls in asp.net center content using align=center but bootstrap overrides this
th[align="center"] {
  text-align: center;
}

th[align="right"] {
  text-align: right;
}

.form-right {
  margin-bottom: 12px;
  text-align: right;

  .clearfix();

  .control-label {
    display: block;
  }

  .input-group {
    float: right;
  }
}

.btn-tabled {
  a {
    &:hover {
      text-decoration: underline;
    }
  }
}

.control-label {
  font-weight: @control-label-weight;

  .label-hidden > & {
    display: none;
  }
}

// add badge colors back to BS3
.badge-danger {
  color: @badge-danger-color !important;
  background-color: @badge-danger-bg !important;
}

.badge-warning {
  color: @badge-warning-color !important;
  background-color: @badge-warning-bg !important;
}

.badge-success {
  color: @badge-success-color !important;
  background-color: @badge-success-bg !important;
}

.badge-info {
  color: @badge-info-color !important;
  background-color: @badge-info-bg !important;
}
/* ... */

